mac-avcapture: Add manual configuration
Currently supported settings:
- Resolution
- Frame rate
- Input format

--- a/plugins/mac-avcapture/CMakeLists.txt
+++ b/plugins/mac-avcapture/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories(${AVFOUNDATION}
 		    ${COCOA})
 
 set(mac-avcapture_HEADERS
+	scope-guard.hpp
 	)
 
 set(mac-avcapture_SOURCES
