rtmp-services: Automatically update services.json
Uses the file-updater utility library to update the services.json file.
If the remote version is incompatible or corrupted, will reject the
file.

--- a/plugins/rtmp-services/CMakeLists.txt
+++ b/plugins/rtmp-services/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(rtmp-services MODULE
 	${rtmp-services_config_HEADERS})
 target_link_libraries(rtmp-services
 	libobs
+	file-updater
 	${OBS_JANSSON_IMPORT})
 
 target_include_directories(rtmp-services
