Added simple compression/expansion filter
To compress, set the multiplier to <1. To expand, set it >1.

--- a/plugins/obs-filters/CMakeLists.txt
+++ b/plugins/obs-filters/CMakeLists.txt
@@ -11,7 +11,8 @@ set(obs-filters_SOURCES
 	sharpness-filter.c
 	gain-filter.c
 	noise-gate-filter.c
-	mask-filter.c)
+	mask-filter.c
+	compressor-filter.c)
 
 add_library(obs-filters MODULE
 	${obs-filters_SOURCES})
