--- a/libobs/obsconfig.h.in
+++ b/libobs/obsconfig.h.in
@@ -7,3 +7,4 @@
 #define OBS_PLUGIN_DESTINATION "@OBS_PLUGIN_DESTINATION@"
 #define OBS_RELATIVE_PREFIX "@OBS_RELATIVE_PREFIX@"
 #define OBS_UNIX_STRUCTURE @OBS_UNIX_STRUCTURE@
+#define HAVE_DBUS @HAVE_DBUS@
