win-mf: Add media foundation h264 encoder
Implements hardware encoders through the Media Foundation interface
provided by Microsoft.

Supports:
- Quicksync (Intel)
- VCE (AMD)
- NVENC (NVIDIA, might only be supported through MF on Windows 10)

Notes:
- NVENC and VCE do not appear to have proper CBR implementations.  This
  isn't a fault of our code, but the Media Foundation libraries.
  Quicksync however appears to be fine.

--- a/plugins/win-mf/CMakeLists.txt
+++ b/plugins/win-mf/CMakeLists.txt
@@ -1,18 +1,27 @@
 project(win-mf)
 
 set(win-mf_SOURCES
-	mf-plugin.c
+	mf-plugin.cpp
 	mf-aac.cpp
-	mf-aac-encoder.cpp)
+	mf-aac-encoder.cpp
+	mf-common.cpp
+	mf-encoder-descriptor.cpp
+	mf-h264.cpp
+	mf-h264-encoder.cpp)
 
 set(win-mf_HEADERS
-	mf-aac-encoder.hpp)
+	mf-common.hpp
+	mf-encoder-descriptor.hpp
+	mf-aac-encoder.hpp
+	mf-h264-encoder.hpp)
 
 add_library(win-mf MODULE
 	${win-mf_SOURCES}
 	${win-mf_HEADERS})
 
 target_link_libraries(win-mf
+	d3d9
+	dxva2
 	uuid
 	mfplat
 	mfuuid
