--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -30,6 +30,7 @@ elseif("${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
 endif()
 
 add_subdirectory(image-source)
+add_subdirectory(input-uiohook)
 add_subdirectory(obs-x264)
 add_subdirectory(obs-libfdk)
 add_subdirectory(obs-ffmpeg)
