--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -242,6 +242,7 @@ set(libobs_util_HEADERS
 	util/vc/vc_stdint.h
 	util/bmem.h
 	util/c99defs.h
+	util/util_uint128.h
 	util/cf-parser.h
 	util/threading.h
 	util/pipe.h
