UI: Add menu button (split button) class
When you assign a menu to a normal QPushButton, it becomes a button that
only allows you to have a menu.  This class lets you click the button
and have a menu at the same time.

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -117,6 +117,7 @@ set(obs_SOURCES
 	window-remux.cpp
 	properties-view.cpp
 	focus-list.cpp
+	menu-button.cpp
 	double-slider.cpp
 	volume-control.cpp
 	adv-audio-control.cpp
@@ -159,6 +160,7 @@ set(obs_HEADERS
 	display-helpers.hpp
 	double-slider.hpp
 	focus-list.hpp
+	menu-button.hpp
 	mute-checkbox.hpp
 	volume-control.hpp
 	adv-audio-control.hpp
