obs-transitions: Implement slide transition. Direction can be controlled by altering slide_info.direction. Accepted values for each component are {-1, 0 , 1}. Note: |direction.x| + |direction.y| must not be greater than 1.

--- a/plugins/obs-transitions/CMakeLists.txt
+++ b/plugins/obs-transitions/CMakeLists.txt
@@ -4,6 +4,7 @@ set(obs-transitions_SOURCES
 	obs-transitions.c
 	transition-fade.c
 	transition-cut.c
+	transition-slide.c
 	)
 
 add_library(obs-transitions MODULE
