obs-transitions: Add 'swipe' transition

--- a/plugins/obs-transitions/CMakeLists.txt
+++ b/plugins/obs-transitions/CMakeLists.txt
@@ -2,6 +2,7 @@ project(obs-transitions)
 
 set(obs-transitions_SOURCES
 	obs-transitions.c
+	transition-swipe.c
 	transition-fade.c
 	transition-cut.c
 	)
