obs-transitions: Add 'Fade To Color' transition

--- a/plugins/obs-transitions/CMakeLists.txt
+++ b/plugins/obs-transitions/CMakeLists.txt
@@ -5,6 +5,7 @@ set(obs-transitions_SOURCES
 	transition-swipe.c
 	transition-fade.c
 	transition-cut.c
+	transition-fade2color.c
 	)
 
 add_library(obs-transitions MODULE
