Add ConsoleApp to project. Initial recording experiments.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ if(NOT INSTALLER_RUN)
 	add_subdirectory(libobs-opengl)
 	add_subdirectory(libobs)
 	add_subdirectory(obs)
+	add_subdirectory(ConsoleApp)
 	add_subdirectory(plugins)
 	if (BUILD_TESTS)
 		add_subdirectory(test)
