Fix build and improve code. AB-1924 AB-1926
- Move ConsoleApp to obs-cli.
- CMake include boost.
- CMake choose obs studio or obs-cli.
- Cleanup obs-cli functions
- Separate obs-cli functions into different modules/files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,24 @@ cmake_minimum_required(VERSION 2.8.12)
 
 project(obs-studio)
 
+option(BUILD_CLI "Build obs-cli instead of desktop version" OFF)
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 include(ObsHelpers)
 include(ObsCpack)
 include(GNUInstallDirs)
 
-if(MSVC AND NOT EXISTS "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user")
+if(MSVC) #AND NOT EXISTS "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user"
+	if(BUILD_CLI)
+	file(GENERATE
+		OUTPUT "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user"
+		INPUT "${CMAKE_SOURCE_DIR}/cmake/ALL_BUILD_CLI.vcxproj.user.in")
+	else()
 	file(GENERATE
 		OUTPUT "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user"
 		INPUT "${CMAKE_SOURCE_DIR}/cmake/ALL_BUILD.vcxproj.user.in")
+	endif()
 endif()
 
 if(NOT CMAKE_BUILD_TYPE)
@@ -95,9 +103,12 @@ if(NOT INSTALLER_RUN)
 
 	add_subdirectory(libobs-opengl)
 	add_subdirectory(libobs)
-	add_subdirectory(obs)
-	add_subdirectory(ConsoleApp)
 	add_subdirectory(plugins)
+	if(BUILD_CLI)
+		add_subdirectory(obs-cli)
+	else()
+		add_subdirectory(obs)
+	endif()
 	if (BUILD_TESTS)
 		add_subdirectory(test)
 	endif()
