Improve build. Choose if you want to build obs-studio, obs-cli or both.
Also update instructions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8.12)
 
 project(obs-studio)
 
-option(BUILD_CLI "Build obs-cli instead of desktop version" OFF)
+option(BUILD_CLI "Build obs-cli" ON)
+option(BUILD_OBS_STUDIO "Build obs-studio" ON)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
@@ -10,15 +11,18 @@ include(ObsHelpers)
 include(ObsCpack)
 include(GNUInstallDirs)
 
-if(MSVC) #AND NOT EXISTS "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user"
+if(MSVC)
+	if(BUILD_OBS_STUDIO)
+		# make obs-studio "Start Debugging" work in ALL_BUILD.
+		file(GENERATE
+			OUTPUT "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user"
+			INPUT "${CMAKE_SOURCE_DIR}/cmake/ALL_BUILD.vcxproj.user.in")
+	endif()
 	if(BUILD_CLI)
-	file(GENERATE
-		OUTPUT "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user"
-		INPUT "${CMAKE_SOURCE_DIR}/cmake/ALL_BUILD_CLI.vcxproj.user.in")
-	else()
-	file(GENERATE
-		OUTPUT "${CMAKE_BINARY_DIR}/ALL_BUILD.vcxproj.user"
-		INPUT "${CMAKE_SOURCE_DIR}/cmake/ALL_BUILD.vcxproj.user.in")
+		# make obs-cli project "Start Debugging" work.
+		file(GENERATE
+			OUTPUT "${CMAKE_BINARY_DIR}/obs-cli/obs-cli.vcxproj.user"
+			INPUT "${CMAKE_SOURCE_DIR}/cmake/ALL_BUILD_CLI.vcxproj.user.in")
 	endif()
 endif()
 
@@ -106,7 +110,8 @@ if(NOT INSTALLER_RUN)
 	add_subdirectory(plugins)
 	if(BUILD_CLI)
 		add_subdirectory(obs-cli)
-	else()
+	endif()
+	if(BUILD_OBS_STUDIO)
 		add_subdirectory(obs)
 	endif()
 	if (BUILD_TESTS)
