Separate monitor info logic per-plaform and to different files.
Also refactor functions for clarity and ease of use.

--- a/obs-cli/CMakeLists.txt
+++ b/obs-cli/CMakeLists.txt
@@ -7,12 +7,23 @@ find_package(Boost 1.61 COMPONENTS program_options REQUIRED)
 
 include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs" ${Boost_INCLUDE_DIRS} .)
 
+if(WIN32)
+	set(obscli_PLATFORM_SOURCES
+		monitor_info-windows.cpp
+	)
+elseif(APPLE)
+# TODO
+elseif(UNIX)
+# TODO
+endif()
+
 set(SRC_LIST
 	main.cpp
 	setup_obs.cpp
 	setup_obs.hpp
 	enum_types.cpp
 	enum_types.hpp
+	monitor_info.hpp
 	)
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 
