Added the CMake stuff to build on all platforms. (Thanks Jim for the help!)

--- a/plugins/jack-audio/CMakeLists.txt
+++ b/plugins/jack-audio/CMakeLists.txt
@@ -17,6 +17,12 @@ include_directories(
 	SYSTEM "${CMAKE_SOURCE_DIR}/libobs"
 	${JACK_INCLUDE_DIR}
 )
+add_definitions(${JACK_DEFINITIONS})
+
+if(MSVC)
+	set(jack-audio_PLATFORM_DEPS
+		w32-pthreads)
+endif()
 
 set(jack-audio_SOURCES
 	obs-jack.c
@@ -30,6 +36,7 @@ add_library(jack-audio MODULE
 target_link_libraries(jack-audio
 	libobs
 	${JACK_LIBRARIES}
+	${jack-audio_PLATFORM_DEPS}
 )
 
 install_obs_plugin_with_data(jack-audio data)
