--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -19,6 +19,7 @@ elseif(APPLE)
 	add_subdirectory(mac-syphon)
 	add_subdirectory(decklink/mac)
 	add_subdirectory(vlc-video)
+	add_subdirectory(linux-jack)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	add_subdirectory(linux-capture)
 	add_subdirectory(linux-pulseaudio)
