--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -19,12 +19,12 @@ elseif(APPLE)
 	add_subdirectory(mac-syphon)
 	add_subdirectory(decklink/mac)
 	add_subdirectory(vlc-video)
-	add_subdirectory(jack-audio)
+	add_subdirectory(linux-jack)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	add_subdirectory(linux-capture)
 	add_subdirectory(linux-pulseaudio)
 	add_subdirectory(linux-v4l2)
-	add_subdirectory(jack-audio)
+	add_subdirectory(linux-jack)
 	add_subdirectory(linux-alsa)
 	add_subdirectory(decklink/linux)
 	add_subdirectory(vlc-video)
@@ -32,7 +32,7 @@ elseif("${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
 	add_subdirectory(linux-capture)
 	add_subdirectory(linux-pulseaudio)
 	add_subdirectory(linux-v4l2)
-	add_subdirectory(jack-audio)
+	add_subdirectory(linux-jack)
 endif()
 
 add_subdirectory(image-source)
