Inital pass at adding a color source plugin

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -16,7 +16,7 @@ elseif(APPLE)
 	add_subdirectory(mac-avcapture)
 	add_subdirectory(mac-capture)
 	add_subdirectory(mac-vth264)
-	add_subdirectory(mac-syphon)
+
 	add_subdirectory(decklink/mac)
 	add_subdirectory(vlc-video)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
@@ -43,3 +43,4 @@ add_subdirectory(obs-filters)
 add_subdirectory(obs-transitions)
 add_subdirectory(rtmp-services)
 add_subdirectory(text-freetype2)
+add_subdirectory(color-source)
