enc-amf: Add submodule and update CMakeLists for plugins.

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -11,6 +11,10 @@ if(WIN32)
 	add_subdirectory(win-mf)
 	add_subdirectory(obs-qsv11)
 	add_subdirectory(vlc-video)
+	option(BUILD_AMF_ENCODER "Build AMD Advanced Media Framework encoder module" OFF)
+	if (BUILD_AMF_ENCODER)
+		add_subdirectory(enc-amf)
+	endif()
 elseif(APPLE)
 	add_subdirectory(coreaudio-encoder)
 	add_subdirectory(mac-avcapture)
