--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "plugins/mac-syphon/syphon-framework"]
 	path = plugins/mac-syphon/syphon-framework
 	url = https://github.com/palana/Syphon-Framework.git
+[submodule "plugins/enc-amf"]
+	path = plugins/enc-amf
+	url = git@github.com:Xaymar/OBS-AMD-Media-Framework.git
