enc-amf: Add AMD h.264 encoder
Closes jp9000/obs-studio#611

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -11,6 +11,14 @@ if(WIN32)
 	add_subdirectory(win-mf)
 	add_subdirectory(obs-qsv11)
 	add_subdirectory(vlc-video)
+	option(BUILD_AMF_ENCODER "Build AMD Advanced Media Framework encoder module" OFF)
+	if (BUILD_AMF_ENCODER)
+		if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/enc-amf/CMakeLists.txt")
+			add_subdirectory(enc-amf)
+		else()
+			message(STATUS "enc-amf submodule not found!  Please fetch submodules.  enc-amf plugin disabled.")
+		endif()
+	endif()
 elseif(APPLE)
 	add_subdirectory(coreaudio-encoder)
 	add_subdirectory(mac-avcapture)
