--- a/UI/frontend-plugins/frontend-tools/CMakeLists.txt
+++ b/UI/frontend-plugins/frontend-tools/CMakeLists.txt
@@ -5,16 +5,32 @@ if(APPLE)
 	include_directories(${COCOA})
 endif()
 
-set(frontend-tools_HEADERS
-	auto-scene-switcher.hpp
-	)
-set(frontend-tools_SOURCES
-	frontend-tools.c
-	auto-scene-switcher.cpp
-	)
-set(frontend-tools_UI
-	forms/auto-scene-switcher.ui
-	)
+if(WIN32 OR APPLE)
+	set(frontend-tools_HEADERS
+		auto-scene-switcher.hpp
+		output-timer.hpp
+		)
+	set(frontend-tools_SOURCES
+		frontend-tools.c
+		auto-scene-switcher.cpp
+		output-timer.cpp
+		)
+	set(frontend-tools_UI
+		forms/auto-scene-switcher.ui
+		forms/output-timer.ui
+		)
+else()
+	set(frontend-tools_HEADERS
+		output-timer.hpp
+		)
+	set(frontend-tools_SOURCES
+		frontend-tools.c
+		output-timer.cpp
+		)
+	set(frontend-tools_UI
+		forms/output-timer.ui
+		)
+endif()
 
 if(WIN32)
 	set(frontend-tools_PLATFORM_SOURCES
