libobs: Fix XGetXCBConnection link error on linux
A linker error for XGetXCBConnection started occurring after the
frontend API was added, the fix is simply to make sure libobs is
properly linking to X11_XCB.

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -13,6 +13,7 @@ endif()
 
 if(UNIX)
 	find_package(DBus QUIET)
+	find_package(X11_XCB REQUIRED)
 else()
 	set(HAVE_DBUS "0")
 endif()
@@ -124,6 +125,14 @@ elseif(UNIX)
 			${libobs_PLATFORM_DEPS}
 			${DBUS_LIBRARIES})
 	endif()
+
+	include_directories(
+		${X11_XCB_INCLUDE_DIRS})
+	add_definitions(
+		${X11_XCB_DEFINITIONS})
+	set(libobs_PLATFORM_DEPS
+		${libobs_PLATFORM_DEPS}
+		${X11_XCB_LIBRARIES})
 
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 		# use the sysinfo compatibility library on bsd
