libobs: Make sure X11_XCB is not linked with apple systems

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -13,7 +13,9 @@ endif()
 
 if(UNIX)
 	find_package(DBus QUIET)
-	find_package(X11_XCB REQUIRED)
+	if (NOT APPLE)
+		find_package(X11_XCB REQUIRED)
+	endif()
 else()
 	set(HAVE_DBUS "0")
 endif()
