UI: Add media/image file drop support

--- a/UI/CMakeLists.txt
+++ b/UI/CMakeLists.txt
@@ -112,6 +112,7 @@ set(obs_SOURCES
 	window-basic-source-select.cpp
 	window-basic-main-scene-collections.cpp
 	window-basic-main-transitions.cpp
+	window-basic-main-dropfiles.cpp
 	window-basic-main-profiles.cpp
 	window-license-agreement.cpp
 	window-basic-status-bar.cpp
