--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -43,6 +43,17 @@ elseif("${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
 	add_subdirectory(linux-jack)
 endif()
 
+if(WIN32 OR APPLE)
+	option(BUILD_BROWSER "Build browser plugin" OFF)
+	if (BUILD_BROWSER)
+		if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/obs-browser/CMakeLists.txt")
+			add_subdirectory(obs-browser)
+		else()
+			message(STATUS "obs-browser submodule not found!  Please fetch submodules.  obs-browser plugin disabled.")
+		endif()
+	endif()
+endif()
+
 add_subdirectory(image-source)
 add_subdirectory(obs-x264)
 add_subdirectory(obs-libfdk)
