--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -19,6 +19,7 @@ if(WIN32)
 			message(STATUS "enc-amf submodule not found!  Please fetch submodules.  enc-amf plugin disabled.")
 		endif()
 	endif()
+	add_subdirectory(obs-ndi)
 elseif(APPLE)
 	add_subdirectory(coreaudio-encoder)
 	add_subdirectory(mac-avcapture)
@@ -28,6 +29,7 @@ elseif(APPLE)
 	add_subdirectory(decklink/mac)
 	add_subdirectory(vlc-video)
 	add_subdirectory(linux-jack)
+	add_subdirectory(obs-ndi)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	add_subdirectory(linux-capture)
 	add_subdirectory(linux-pulseaudio)
@@ -36,6 +38,7 @@ elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	add_subdirectory(linux-alsa)
 	add_subdirectory(decklink/linux)
 	add_subdirectory(vlc-video)
+	add_subdirectory(obs-ndi)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
 	add_subdirectory(linux-capture)
 	add_subdirectory(linux-pulseaudio)
